objects/Benefit_Header_Detail_Association__c.object
<CustomObject>
    <fields>
        <fullName>Benefit_Header_Detail__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Benefit Header Detail</label>
        <referenceTo>Benefit_Header_Detail__c</referenceTo>
        <relationshipName>Benefit_Header_Detail_Assignment</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mapped_BHD_Id__c</fullName>
        <label>Mapped BHD Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mapped_Plan_Marketing_Id__c</fullName>
        <label>Mapped Plan Marketing Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Plan</label>
        <referenceTo>Plan__c</referenceTo>
        <relationshipName>Benefit_Header_Detail_Assignment</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Benefit Header Detail Association</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Plan__c</columns>
        <columns>Benefit_Header_Detail__c</columns>
        <columns>Mapped_BHD_Id__c</columns>
        <columns>Mapped_Plan_Marketing_Id__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Benefit Header Detail Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Benefit Header Detail Associations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>